# podcast-noodler

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  setup.py  workspace.yaml
podcast_noodler/: __init__.py  assets.py  utils.py
podcast_noodler/assets/: __init__.py  constants.py  episodes.py  stats.py
podcast_noodler/jobs/: __init__.py
podcast_noodler/partitions/: __init__.py
scripts/: download-nltk.py
