[tool.poetry]
name = "podcast-noodler"
version = "0.1.0"
description = ""
authors = ["Simon Whitaker <sw@netcetera.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.0"
dagster = "^1.7.3"
dagster-webserver = "^1.7.3"
feedparser = "^6.0.11"
aiohttp = "^3.9.5"
pandas = "^2.2.2"
nltk = "^3.8.1"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
arrow = "^1.3.0"
dagster-openai = "^0.23.9"


[tool.poetry.group.dev.dependencies]
bpython = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.dagster]
module_name = "podcast_noodler"
